--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "nuxt-2-goto",
   "displayName": "Nuxt 2 goto",
   "description": "Nuxt 2 go to component.",
-  "version": "0.1.1",
+  "version": "0.1.2",
+  "icon": "logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/jameskid007/nuxt-2-goto",
